--- a/Monopoly/generatedDocumentation/latex/class_monopoly_1_1_cards_1_1_agency_card.tex
+++ b/Monopoly/generatedDocumentation/latex/class_monopoly_1_1_cards_1_1_agency_card.tex
@@ -39,6 +39,9 @@ bool \mbox{\hyperlink{class_monopoly_1_1_cards_1_1_card_a5569d582a0692b3a37c81dd
 \end{DoxyCompactItemize}
 
 
+\subsection{Detailed Description}
+The data structure containing data representing an Agency \mbox{\hyperlink{class_monopoly_1_1_cards_1_1_card}{Card}} of a gameplan. 
+
 \subsection{Constructor \& Destructor Documentation}
 \mbox{\Hypertarget{class_monopoly_1_1_cards_1_1_agency_card_ac328333ee5f6dc5b7e0903af22aff615}\label{class_monopoly_1_1_cards_1_1_agency_card_ac328333ee5f6dc5b7e0903af22aff615}} 
 \index{Monopoly\+::\+Cards\+::\+Agency\+Card@{Monopoly\+::\+Cards\+::\+Agency\+Card}!Agency\+Card@{Agency\+Card}}
