--- a/Monopoly/generatedDocumentation/latex/class_monopoly_1_1_cards_1_1_bonus_card.tex
+++ b/Monopoly/generatedDocumentation/latex/class_monopoly_1_1_cards_1_1_bonus_card.tex
@@ -36,7 +36,7 @@ bool \mbox{\hyperlink{class_monopoly_1_1_cards_1_1_card_a5569d582a0692b3a37c81dd
 
 
 \subsection{Detailed Description}
-A good class 
+The data structure containing data representing a Bonus \mbox{\hyperlink{class_monopoly_1_1_cards_1_1_card}{Card}} of a gameplan. 
 
 \subsection{Constructor \& Destructor Documentation}
 \mbox{\Hypertarget{class_monopoly_1_1_cards_1_1_bonus_card_a444094e643634f0c671c43917f44412f}\label{class_monopoly_1_1_cards_1_1_bonus_card_a444094e643634f0c671c43917f44412f}} 
