--- a/Monopoly/generatedDocumentation/latex/class_monopoly_1_1_cards_1_1_special_card.tex
+++ b/Monopoly/generatedDocumentation/latex/class_monopoly_1_1_cards_1_1_special_card.tex
@@ -15,6 +15,9 @@ float \mbox{\hyperlink{class_monopoly_1_1_cards_1_1_special_card_ab81aa9650e3474
 \end{DoxyCompactItemize}
 
 
+\subsection{Detailed Description}
+An ancestor card of Treasure \mbox{\hyperlink{class_monopoly_1_1_cards_1_1_card}{Card}} and Risk \mbox{\hyperlink{class_monopoly_1_1_cards_1_1_card}{Card}}. 
+
 \subsection{Property Documentation}
 \mbox{\Hypertarget{class_monopoly_1_1_cards_1_1_special_card_a7404d6bf23aa3858a8831075162bcb66}\label{class_monopoly_1_1_cards_1_1_special_card_a7404d6bf23aa3858a8831075162bcb66}} 
 \index{Monopoly\+::\+Cards\+::\+Special\+Card@{Monopoly\+::\+Cards\+::\+Special\+Card}!Description@{Description}}
